[gd_scene load_steps=3 format=3 uid="uid://xae3cgy0l4fk"]

[ext_resource type="Script" path="res://settings.gd" id="1_a584f"]

[sub_resource type="LabelSettings" id="LabelSettings_4152p"]
font_size = 48

[node name="Settings" type="Node2D"]
position = Vector2(-1, 5)
script = ExtResource("1_a584f")

[node name="Label" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 81.0
offset_top = 26.0
offset_right = 267.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = SubResource("LabelSettings_4152p")

[node name="GridContainer" type="GridContainer" parent="Label"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = 58.5
offset_right = 125.0
offset_bottom = 194.5
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="UpLabel" type="Label" parent="Label/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Up"

[node name="Panel" type="Control" parent="Label/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="UpButton" type="Button" parent="Label/GridContainer"]
process_mode = 3
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Up Arrow"

[node name="DownLabel" type="Label" parent="Label/GridContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Down"

[node name="Panel2" type="Control" parent="Label/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="DownButton" type="Button" parent="Label/GridContainer"]
layout_mode = 2
text = "Down Arrow"

[node name="LeftLabel" type="Label" parent="Label/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Left"

[node name="Panel3" type="Control" parent="Label/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="LeftButton" type="Button" parent="Label/GridContainer"]
layout_mode = 2
text = "Left Arrow"

[node name="RightLabel" type="Label" parent="Label/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Right"

[node name="Panel4" type="Control" parent="Label/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="RightButton" type="Button" parent="Label/GridContainer"]
layout_mode = 2
text = "Right Arrow"

[node name="GridContainer2" type="GridContainer" parent="Label"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.5
offset_top = 250.0
offset_right = 135.5
offset_bottom = 290.0
grow_horizontal = 2
columns = 2

[node name="Save" type="Button" parent="Label/GridContainer2"]
layout_mode = 2
text = "Save Keybinds"

[node name="Return" type="Button" parent="Label/GridContainer2"]
layout_mode = 2
text = "Return to Screen"

[connection signal="pressed" from="Label/GridContainer/UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="Label/GridContainer/DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="Label/GridContainer/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Label/GridContainer/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Label/GridContainer2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Label/GridContainer2/Return" to="." method="_on_return_pressed"]
